--- a/prac2/k8s/ingress.yaml
+++ b/prac2/k8s/ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: marketsenseai-backend
-  annotations:
-    kubernetes.io/ingress.class: nginx
+  name: app-ingress
+  namespace: production
 spec:
+  ingressClassName: nginx
   rules:
-    - host: marketsenseai.local
+    - host: demo.local
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: marketsenseai-backend
+                name: app-service
                 port:
                   number: 80
