--- a/prac2/k8s/service.yaml
+++ b/prac2/k8s/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: marketsenseai-backend
-  labels:
-    app: marketsenseai-backend
+  name: app-service
+  namespace: production
 spec:
   type: ClusterIP
   selector:
-    app: marketsenseai-backend
+    app: demo
   ports:
     - port: 80
-      targetPort: 4000
-      protocol: TCP
-      name: http
+      targetPort: 3000
